Fix to auto load popovers Weather now truncates and shows full text in popover

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,9 +12,12 @@ body {
 }
 
 .popover{
-    max-width: 75%; /* Max Width of the popover (depending on the container!) */
-}
+    }
 
 .daysSelect {
     height: 35px;
+}
+
+.no-top-margin {
+    margin: 0px 0 20px;
 }
